parser/src/test/resources/corpus/valid/59_weird_whitespace.ff
rule    "Weird Whitespace"   {

    description :   "extra spaces"

    let     x    =    1


    let y = 2
}
