parser/src/test/resources/corpus/invalid/44_trailing_operator.ff
rule "Trailing Operator" {
  let x = a +
}
